<resources>
    <string name="app_name" translatable="false">Feedbackr</string>
    <string name="title_activity_main">Feedbackr</string>

    <string name="feedback">Feedback</string>
    <string name="map">Map</string>
    <string name="feedbacks">Feedbacks</string>

    <string name="auth_failed">Authentication failed - Please check connectivity and restart app</string>

    <string name="feedback_success">Feedback Send Successfully!</string>
    <string name="feedback_explain">Explain your Feedback…</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="feedback_publish">Make Public</string>

    <string name="feedback_positive">Send Positive Feedback</string>
    <string name="feedback_negative">Send Negative Feedback</string>

    <string name="feedback_send">%s Feedback Send</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>

    <string name="locationError">Location Disabled</string>


    <string name="content_description_location_error">Location Error</string>
    <string name="content_description_retry">retry</string>
    <string name="content_description_calendar">Calendar</string>
    <string name="content_description_time">time</string>
    <string name="edit">Edit</string>
    <string name="switch_kind">Switch Feedback</string>
    <string name="delete">delete</string>
    <string name="delete_confirmation">Are you sure you want to delete the feedback? This can\'t be undone.</string>

    <!-- Categories -->
    <string name="cat_pos_sit">Place to sit</string>
    <string name="cat_pos_toilet">Public/Clean Toilet</string>
    <string name="cat_pos_disability_access">Disability Access</string>
    <string name="cat_pos_wifi">Public Wi-Fi</string>
    <string name="cat_pos_eat_drink">Place to Eat/Drink</string>
    <string name="cat_pos_nice_view">Nice View</string>
    <string name="cat_neg_dark">Dark Place</string>
    <string name="cat_neg_dirty">Dirty</string>
    <string name="cat_neg_people">Shady Group of People</string>
    <string name="cat_neg_walking_friendly">Not Pedestrian Friendly</string>
    <string name="cat_neg_graffiti">Graffiti</string>
    <string name="cat_choose">Choose Category</string>
    <string name="cat_pos_general">General Positive</string>
    <string name="cat_neg_general">General Negative</string>


    <string name="save_changes">Save Feedback?</string>
    <string name="discard">Discard</string>
    <string name="save_warning">Unsaved Changes are lost!</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="show_hide_public">%1$s Public Feedback</string>
    <string name="show_hide_private">%1$s  my Feedback</string>
    <string name="show_hide_postive">%1$s positive Feedback</string>
    <string name="show_hide_negative">%1$s negative Feedback</string>
    <string name="show_hide">Show/Hide</string>
    <string name="switch_feedback">Switch Feedback to %s</string>
    <string name="switch_warning">Switching the Feedback will loose the current Category</string>
    <string name="switch_word">Switch</string>
    <string name="noLocation">No Location available</string>
    <string name="noAuth">Not authenticated</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_about">About</string>

    <string name="license">License</string>
    <string name="ok">OK</string>

    <string name="profile_attach">Always attach profile</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_gender_m">Male</string>
    <string name="profile_gender_f">Female</string>
    <string name="profile_gender_mf">None</string>
    <string name="profile_age">Age</string>

    <string name="feedback_attach">Attach profile</string>
    <string name="dialog_image_title">Image for the feedback</string>
    <string name="remove_image">Remove Image</string>
    <string name="remove_image_pos">remove</string>
    <string name="remove_image_neg">cancel</string>

    <string name="attach_profile_no_profile">No Profile</string>
    <string name="attach_profile_no_proile_desc">Please edit your profile to be able to attach it.</string>
    <string name="no_feedback_found">No Feedback found</string>

    <string name="about_info">
        Feedbackr wurde am Lehrstuhl für Programmiersprachen und Softwaretechnik der Heinrich-Heine-Universität Düsseldorf (stups.hhu.de) entwickelt.
        \n
        \nSollten Sie fragen zu dem Projekt haben können Sie sich gerne an @hhu.de wenden.
    </string>

</resources>
