<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="feedback"
            type="de.hhu.cs.feedbackr.model.Feedback"/>
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="de.hhu.cs.feedbackr.view.FeedbackEditActivity">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.Guideline
                android:id="@+id/guideline50V"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"
                tools:layout_editor_absoluteX="192dp"
                tools:layout_editor_absoluteY="25dp"/>

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapViewFeedbackDet"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_weight="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/textViewSuccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback_success"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/green"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mapViewFeedbackDet"/>


            <ImageView
                android:id="@+id/imageViewCalendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:tint="@{feedback.positive ? @color/green : @color/red}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSuccess"
                app:srcCompat="@drawable/ic_calendar_black_24dp"
                android:contentDescription="@string/content_description_calendar"/>

            <TextView
                android:id="@+id/textViewCalendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@{feedback.day}"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewCalendar"
                app:layout_constraintLeft_toRightOf="@+id/imageViewCalendar"
                app:layout_constraintTop_toTopOf="@+id/imageViewCalendar"
                tools:text="21.09.2016"/>

            <ImageView
                android:id="@+id/imageViewTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:tint="@{feedback.positive ? @color/green : @color/red}"
                app:layout_constraintLeft_toLeftOf="@+id/guideline50V"
                app:layout_constraintTop_toBottomOf="@+id/textViewSuccess"
                app:srcCompat="@drawable/ic_time_black_24dp"
                android:contentDescription="@string/content_description_time"/>

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@{feedback.time}"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewTime"
                app:layout_constraintLeft_toRightOf="@+id/imageViewTime"
                app:layout_constraintTop_toTopOf="@+id/imageViewTime"
                tools:text="11:05"/>

            <Switch
                android:id="@+id/switchPublish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:checked="@={feedback.published}"
                android:text="@string/feedback_publish"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/imageViewTime"
                app:layout_constraintHorizontal_bias="0.0"/>

            <!-- TODO: Add hints what switches do-->


            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_category"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:prompt="@string/cat_choose"
                android:entries="@array/positive_array"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchPublish"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <EditText
                android:id="@+id/editTextMoreInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/feedback_explain"
                android:inputType="textMultiLine"
                android:minLines="8"
                android:selectAllOnFocus="false"
                android:text="@={feedback.details}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/spinner_category"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>
</layout>